--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/png" href="tri.png">
     <script src="/script.js" defer></script>
-    <title>Only for Anh Thư :3</title>
+    <title>Only for Mai Anh :3</title>
     <meta name="description" content="Will AnhThu be my valentine?" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="16x16" />
     <meta name="next-size-adjust" />
